src/gds-upgrade/sass/_filters.scss
:root {
  --main-bg-color: #f3f2f1;
  --main-text-color: #0b0c0c;
  --main-border-color: #0b0c0c;
  --lightgray: lightgrey;
  --white: #fff;
}

.dfe-hidden {
  display: none;
}

.dfe-right-align {
  float: right;
}

.dfe-selected-filters-background {
  background-color: var(--main-bg-color);
  padding-bottom: 20px;
}

.dfe-filter-header {
  background-color: govuk-colour("mid-grey");
  padding: govuk-spacing(2) govuk-spacing(2) govuk-spacing(2);
  text-align: justify;
}

.dfe-filter-scroll {
  overflow: scroll;
  height: calc(95vh);
}

.dfe-filters-selected {
  & .filter__tag {
    background-color: var(--white);
    border: 1px solid var(--main-border-color);
    display: inline-block;
    margin-top: 5px;
    padding: 5px;
    text-decoration: none;

    &:link,
    &:visited {
      color: var(--main-text-color);
    }

    &:hover {
      cursor: pointer;
      color: var(--main-text-color);
      background: var(--lightgray);
    }

    &:after {
      width: 10px;
      height: 10px;
      margin-left: 5px;
      vertical-align: middle;
      font-weight: bold;
      display: inline-block;
      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path d="M10 1.01L8.99 0 5 3.99 1.01 0 0 1.01 3.99 5 0 8.99 1.01 10 5 6.01 8.99 10 10 8.99 6.01 5 10 1.01z"/></svg>');
      content: "";
    }
  }

  & .filter-tags {
    padding-left: 0px;
    margin-top: 5px;
  }

  & .clearTags {
    display: none;
  }

  & .selectedText {
    margin-left: 40px;
  }

  & .js-enabled .govuk-accordion__section-summary {
    margin-bottom: 12px;
  }
}

.dfe-filter-search {
  padding-left: 10px;
  padding-right: 10px;
}

.dfe-filter-by-container {
  border: solid 1px var(--lightgray);
}

.dfe-filter-by-checkbox {
  padding-left: 10px;
}

